--- a/css/main.css
+++ b/css/main.css
@@ -97,10 +97,16 @@ textarea {
    Author's custom styles
    ========================================================================== */
 
-body {
-  background: #FFF url(/img/samoyed.gif);
-  background-size: 100%;
+html {
+  background-image: url(/img/samoyed.gif);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
   text-align: center;
+  display: block;
+  height: 100%;
+}
+
+body {
   margin-top: 15%;
 }
 
